-
Bug
-
Resolution: Fixed
-
Critical
-
Lustre 2.11.0
-
3
-
9223372036854775807
Got LBUG in a simple test:
[ 1074.523509] LustreError: 11836:0:(osd_handler.c:2714:osd_transfer_project()) ASSERTION( __kprojid_val(LDISKFS_I(inode)->i_projid) != 0 ) failed:
[ 1074.536694] LustreError: 11836:0:(osd_handler.c:2714:osd_transfer_project()) LBUG
[ 1074.544241] Pid: 11836, comm: mdt03_002
[ 1074.544243]
Call Trace:
[ 1074.544269] [<ffffffffc08297ae>] libcfs_call_trace+0x4e/0x60 [libcfs]
[ 1074.544282] [<ffffffffc082983c>] lbug_with_loc+0x4c/0xb0 [libcfs]
[ 1074.544299] [<ffffffffc0e84421>] osd_transfer_project+0x191/0x1a0 [osd_ldiskfs]
[ 1074.544318] [<ffffffffc11179d4>] ? lod_load_striping+0x44/0x1d0 [lod]
[ 1074.544333] [<ffffffffc0e84630>] osd_quota_transfer+0x90/0x230 [osd_ldiskfs]
[ 1074.544357] [<ffffffffc028c5e1>] ? start_this_handle+0x1a1/0x430 [jbd2]
[ 1074.544374] [<ffffffffc0e916cf>] osd_attr_set+0x11f/0xb70 [osd_ldiskfs]
[ 1074.544382] [<ffffffff811e4092>] ? kmem_cache_alloc+0x1c2/0x1f0
[ 1074.544403] [<ffffffffc1141608>] lod_sub_attr_set+0x1c8/0x460 [lod]
[ 1074.544419] [<ffffffffc0decf69>] ? __ldiskfs_journal_start_sb+0x69/0xe0 [ldiskfs]
[ 1074.544436] [<ffffffffc112d8aa>] lod_attr_set+0xba/0x9d0 [lod]
[ 1074.544538] [<ffffffffc0c383c2>] ? top_trans_start+0x702/0x940 [ptlrpc]
[ 1074.544559] [<ffffffffc11a7b70>] mdd_attr_set_internal+0x120/0x2a0 [mdd]
[ 1074.544575] [<ffffffffc11a895d>] mdd_attr_set+0x8bd/0xcf0 [mdd]
[ 1074.544605] [<ffffffffc103c41f>] mdt_reint_setattr+0xc5f/0x10a0 [mdt]
[ 1074.544626] [<ffffffffc103c8e3>] mdt_reint_rec+0x83/0x210 [mdt]
[ 1074.544644] [<ffffffffc101c20b>] mdt_reint_internal+0x5fb/0x9c0 [mdt]
[ 1074.544663] [<ffffffffc10271d7>] mdt_reint+0x67/0x140 [mdt]
[ 1074.544729] [<ffffffffc0c2571a>] tgt_request_handle+0x92a/0x13b0 [ptlrpc]
[ 1074.544788] [<ffffffffc0bc9903>] ptlrpc_server_handle_request+0x253/0xab0 [ptlrpc]
[ 1074.544844] [<ffffffffc0bc6798>] ? ptlrpc_wait_event+0x98/0x340 [ptlrpc]
[ 1074.544844] [<ffffffffc0bc6798>] ? ptlrpc_wait_event+0x98/0x340 [ptlrpc]
[ 1074.544850] [<ffffffff810c7c82>] ? default_wake_function+0x12/0x20
[ 1074.544856] [<ffffffff810bdc4b>] ? __wake_up_common+0x5b/0x90
[ 1074.544912] [<ffffffffc0bcd0b2>] ptlrpc_main+0xa92/0x1e40 [ptlrpc]
[ 1074.544966] [<ffffffffc0bcc620>] ? ptlrpc_main+0x0/0x1e40 [ptlrpc]
[ 1074.544972] [<ffffffff810b4031>] kthread+0xd1/0xe0
[ 1074.544977] [<ffffffff810b3f60>] ? kthread+0x0/0xe0
[ 1074.544983] [<ffffffff816c0577>] ret_from_fork+0x77/0xb0
[ 1074.544988] [<ffffffff810b3f60>] ? kthread+0x0/0xe0
[ 1074.544990]
[ 1074.544993] Kernel panic - not syncing: LBUG
[ 1074.549307] CPU: 7 PID: 11836 Comm: mdt03_002 Tainted: G OE ------------ 3.10.0-693.21.1.el7_lustre.2.11.50_53_ge72eb50.x86_64 #1
[ 1074.562191] Hardware name: Supermicro X9SRE/X9SRE-3F/X9SRi/X9SRi-3F/X9SRE/X9SRE-3F/X9SRi/X9SRi-3F, BIOS 1.0c 10/08/2012
[ 1074.573111] Call Trace:
[ 1074.575605] [<ffffffff816ae7c8>] dump_stack+0x19/0x1b
[ 1074.580811] [<ffffffff816a8634>] panic+0xe8/0x21f
[ 1074.585664] [<ffffffffc0829854>] lbug_with_loc+0x64/0xb0 [libcfs]
[ 1074.591944] [<ffffffffc0e84421>] osd_transfer_project+0x191/0x1a0 [osd_ldiskfs]
[ 1074.599430] [<ffffffffc11179d4>] ? lod_load_striping+0x44/0x1d0 [lod]
[ 1074.606029] [<ffffffffc0e84630>] osd_quota_transfer+0x90/0x230 [osd_ldiskfs]
[ 1074.613259] [<ffffffffc028c5e1>] ? start_this_handle+0x1a1/0x430 [jbd2]
[ 1074.620039] [<ffffffffc0e916cf>] osd_attr_set+0x11f/0xb70 [osd_ldiskfs]
[ 1074.626825] [<ffffffff811e4092>] ? kmem_cache_alloc+0x1c2/0x1f0
[ 1074.632909] [<ffffffffc1141608>] lod_sub_attr_set+0x1c8/0x460 [lod]
[ 1074.639330] [<ffffffffc0decf69>] ? __ldiskfs_journal_start_sb+0x69/0xe0 [ldiskfs]
[ 1074.646984] [<ffffffffc112d8aa>] lod_attr_set+0xba/0x9d0 [lod]
[ 1074.653035] [<ffffffffc0c383c2>] ? top_trans_start+0x702/0x940 [ptlrpc]
[ 1074.659822] [<ffffffffc11a7b70>] mdd_attr_set_internal+0x120/0x2a0 [mdd]
[ 1074.666696] [<ffffffffc11a895d>] mdd_attr_set+0x8bd/0xcf0 [mdd]
[ 1074.672789] [<ffffffffc103c41f>] mdt_reint_setattr+0xc5f/0x10a0 [mdt]
[ 1074.679395] [<ffffffffc103c8e3>] mdt_reint_rec+0x83/0x210 [mdt]
[ 1074.685505] [<ffffffffc101c20b>] mdt_reint_internal+0x5fb/0x9c0 [mdt]
[ 1074.692116] [<ffffffffc10271d7>] mdt_reint+0x67/0x140 [mdt]
[ 1074.697895] [<ffffffffc0c2571a>] tgt_request_handle+0x92a/0x13b0 [ptlrpc]
[ 1074.704902] [<ffffffffc0bc9903>] ptlrpc_server_handle_request+0x253/0xab0 [ptlrpc]
[ 1074.712686] [<ffffffffc0bc6798>] ? ptlrpc_wait_event+0x98/0x340 [ptlrpc]
[ 1074.719566] [<ffffffff810c7c82>] ? default_wake_function+0x12/0x20
[ 1074.725901] [<ffffffff810bdc4b>] ? __wake_up_common+0x5b/0x90
[ 1074.731853] [<ffffffffc0bcd0b2>] ptlrpc_main+0xa92/0x1e40 [ptlrpc]
[ 1074.738227] [<ffffffffc0bcc620>] ? ptlrpc_register_service+0xe90/0xe90 [ptlrpc]
[ 1074.747908] [<ffffffff810b4031>] kthread+0xd1/0xe0
[ 1074.755120] [<ffffffff810b3f60>] ? insert_kthread_work+0x40/0x40
[ 1074.763555] [<ffffffff816c0577>] ret_from_fork+0x77/0xb0
[ 1074.771192] [<ffffffff810b3f60>] ? insert_kthread_work+0x40/0x40